<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vgr_dialog_auto_clear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_dialog"
        android:minWidth="326dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="@dimen/d_24"
            android:gravity="center_vertical"
            android:text="@string/auto_clear_setting"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rll_07"

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_toRightOf="@id/cb_07"
                    android:text="@string/_7_days"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/cb_07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/d_24"
                    android:button="@drawable/custom_checkbox"
                    android:clickable="false"
                    android:gravity="center" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rll_30"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_toRightOf="@id/cb_30"
                    android:text="@string/_30_days"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/cb_30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/d_24"
                    android:button="@drawable/custom_checkbox"
                    android:checked="true"
                    android:clickable="false"
                    android:gravity="center" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rll_90"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:visibility="visible">

                <CheckBox
                    android:id="@+id/cb_90"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/d_24"
                    android:button="@drawable/custom_checkbox"
                    android:clickable="false"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_toRightOf="@id/cb_90"
                    android:text="@string/_90_days"
                    android:textColor="#000000"
                    android:textSize="14sp" />

            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:elevation="5dp"
            android:gravity="right"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lnl_btn_auto_clear_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="32dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/s_14" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/lnl_btn_auto_clear_accept"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/d_24"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTextDialog"
                    android:textSize="@dimen/s_14" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
